<resources>
    <string name="app_name">MorseConnect</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="logo_desc">App Logo</string>
    <string name="login_welcome">Welcome Back!</string>
    <string name="signup_title">Create Account</string>
    <string name="forgot_password_title">Reset Password</string>
    <string name="hint_email">Email Address</string>
    <string name="btn_create_account">Create Account</string>
    <string name="btn_send_otp">Send OTP</string>
    <string name="title_library_mode">Library Mode</string>
    <string name="title_quiz_mode">Quiz Mode</string>
    <string name="title_settings">Settings</string>
    <string name="settings_sound_title">Sound Settings</string>
    <string name="settings_sound_desc">Adjust frequency and volume</string>
    <string name="label_frequency">Frequency: %1$d Hz</string>
    <string name="label_volume">Volume: %1$d%%</string>
    <string name="label_speed">Morse Speed: %1$d WPM</string>
    <string name="label_frequency_default">Frequency: 600 Hz</string>
    <string name="label_volume_default">Volume: 80%</string>
    <string name="label_speed_default">Speed: 20 WPM</string>
    <string name="settings_progress_title">Progress</string>
    <string name="settings_progress_desc">Track your learning progress</string>
    <string name="settings_history_title">History</string>
    <string name="settings_history_desc">View past answers and activity</string>
    <string name="settings_about_title">About Us</string>
    <string name="settings_about_desc">MorseConnect is an educational app designed to help users learn Morse code through interactive practice and quizzes.</string>
    <string name="btn_logout">Logout</string>
    <string name="hint_practice_input">Type text (HELLO 123)</string>
    <string name="btn_play_input">Play Input</string>
    <string name="btn_tap_morse">TAP</string>
    <string name="btn_check_answer">Check</string>
    <string name="btn_next_question">Next</string>
    <string name="btn_delete">Delete</string>
    <string name="quiz_easy">Easy</string>
    <string name="quiz_medium">Medium</string>
    <string name="quiz_hard">Hard</string>
    <string name="btn_learn_mode">Learn Mode</string>
    <string name="btn_practice_mode">Practice Mode</string>
    <string name="btn_play_morse">Play Morse</string>
    <string name="btn_select_answer">Select Answer</string>
    <string name="hint_new_username">New Username</string>
    <string name="hint_new_password">New Password</string>
    <string name="app_title">MORSE CONNECT</string>
</resources>